Added new downlaods, working buying beat
